# sudoku-solver

./: CMakeLists.txt  Makefile  README.md  box_iterator.cpp  box_iterator.hpp  manual_test  solver.cpp  solver.hpp  state.cpp  state.hpp  test
src/: box_iterator.hpp  main.cpp  solver.cpp  solver.hpp  state.cpp  state.hpp
test/: iterator_test.cpp  pair_iterator_test.cpp  simple_test.cpp
